--- a/demo.html
+++ b/demo.html
@@ -1,161 +1,77 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8"/>
-		<title>看我</title>
-		<style>
-		body
-			{
-				margin:0;
-				background:#000;
-			}
-		#wrap
-			{
-				width:300px;
-				height:400px;
-				position: relative;
-				margin:100px auto;
-				-webkit-perspective:3000px;
-				-moz-perspective:3000px;
-				-ms-transform:perspective(3000px);
-				-ms-perspective:3000px;
-			}
-		#head
-			{
-				width:100%;
-				height:100%;
-				position: absolute;
-				-webkit-transform-style: preserve-3d;
-				-webkit-animation:donghua 15s linear 0s infinite;
-				-moz-transform-style: preserve-3d;
-				-moz-animation:donghua 15s linear 0s infinite;
-				-ms-transform-style: preserve-3d;
-				-ms-animation:donghua 25s linear 0s infinite;
-			}
-		#head div
-			{	
-				position: absolute;
-				top:0;
-				left:0;
-				width:300px;
-				height:400px;
-				border:1px solid red;
-				text-align: center;
-				line-height:100px;
-			}
-		#head div:nth-child(1)
-			{
-				-webkit-transform:rotateY(0deg) translateZ(400px);
-				-moz-transform:rotateY(0deg) translateZ(400px);
-				-ms-transform:rotateY(0deg) translateZ(400px);
-				background:url(images/01.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(2)
-			{
-				-webkit-transform:rotateY(36deg) translateZ(500px);
-				-moz-transform:rotateY(36deg) translateZ(500px);
-				-ms-transform:rotateY(36deg) translateZ(500px);
-				background:url(images/02.jpg);
-				background-size:cover;
-			}
-			
-		#head div:nth-child(3)
-			{
-				-webkit-transform:rotateY(72deg) translateZ(400px);
-				-moz-transform:rotateY(72deg) translateZ(400px);
-				-ms-transform:rotateY(72deg) translateZ(400px);
-				background:url(images/03.jpg);
-				background-size:cover;
-			}
-			
-		#head div:nth-child(4)
-			{
-				-webkit-transform:rotateY(108deg) translateZ(500px);
-				-moz-transform:rotateY(108deg) translateZ(500px);
-				-ms-transform:rotateY(108deg) translateZ(500px);
-				background:url(images/04.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(5)
-			{
-				-webkit-transform:rotateY(144deg) translateZ(400px);
-				-moz-transform:rotateY(144deg) translateZ(400px);
-				-ms-transform:rotateY(144deg) translateZ(400px);
-				background:url(images/05.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(6)
-			{
-				-webkit-transform:rotateY(180deg) translateZ(500px);
-				-moz-transform:rotateY(180deg) translateZ(500px);
-				-ms-transform:rotateY(180deg) translateZ(500px);
-				background:url(images/06.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(7)
-			{
-				-webkit-transform:rotateY(216deg) translateZ(400px);
-				-moz-transform:rotateY(216deg) translateZ(400px);
-				-ms-transform:rotateY(216deg) translateZ(400px);
-				background:url(images/07.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(8)
-			{
-				-webkit-transform:rotateY(252deg) translateZ(500px);
-				-moz-transform:rotateY(252deg) translateZ(500px);
-				-ms-transform:rotateY(252deg) translateZ(500px);
-				background:url(images/08.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(9)
-			{
-				-webkit-transform:rotateY(288deg) translateZ(400px);
-				-moz-transform:rotateY(288deg) translateZ(400px);
-				-ms-transform:rotateY(288deg) translateZ(400px);
-				background:url(images/04.jpg);
-				background-size:cover;
-			}
-		#head div:nth-child(10)
-			{
-				-webkit-transform:rotateY(324deg) translateZ(500px);
-				-moz-transform:rotateY(324deg) translateZ(500px);
-				-ms-transform:rotateY(324deg) translateZ(500px);
-				background:url(images/07.jpg);
-				background-size:cover;
-			}
-		@-webkit-keyframes donghua{
-			0%{transform:rotateX(5deg) rotateY(360deg)}
-			50%{transform:rotateX(-5deg) rotateY(180deg)}
-			100%{transform:rotateX(5deg) rotateY(0deg)}
-		}
-		@-moz-keyframes donghua{
-			0%{transform:rotateY(10deg) rotateY(0deg)}
-			50%{transform:rotateY(-10deg) rotateY(180deg)}
-			100%{transform:rotateY(10deg) rotateY(360deg)}
-		}
-		@-ms-keyframes donghua{
-			0%{transform:rotateY(10deg) rotateY(0deg)}
-			50%{transform:rotateY(-10deg) rotateY(180deg)}
-			100%{transform:rotateY(10deg) rotateY(360deg)}
-		}
-		</style>
-	</head>
-	<body>
-		<div id="wrap">
-			<div id="head">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>iPresenter相册3D插件</title>
+
+</head>
+<body>
+
+
+
+<link rel="stylesheet" href="css/style.css" />
+
+<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="js/ipresenter.packed.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$('#ipresenter').iPresenter({
+		animSpeed: 2000,
+		timer: '360Bar',
+		timerDiameter: 60,
+		timerStroke: 5,
+		timerPadding: 5,
+		timerColor: '#000',
+		timerBg: '#FFF',
+		timerOpacity: 0.4,
+		directionNav: false,
+		controlNav: true
+	});
+});
+</script>
+
+<div class="container">
+	<div id="ipresenter">
+		<div class="step" data-x="0" data-y="0" data-thumbnail="images/thumbs/895601241627423.jpg">
+			<img src="images/photos/895601241627423.jpg" />
 		</div>
-	</body>
+		<div class="step" data-x="1500" data-y="0" data-rotatex="180" data-easing="easeInOutQuint" data-pausetime="15000" data-thumbnail="images/thumbs/895601241627428.jpg">
+			<img src="images/photos/895601241627428.jpg" />
+		</div>
+		<div class="step" data-x="3000" data-y="0" data-rotatey="180" data-pausetime="2000" data-thumbnail="images/thumbs/895601241627432.jpg">
+			<img src="images/photos/895601241627432.jpg" />
+		</div>
+		<div class="step" data-x="4500" data-y="0" data-rotatex="180" data-thumbnail="images/thumbs/895601241627445.jpg">
+			<img src="images/photos/895601241627445.jpg" />
+		</div>
+		<div class="step" data-x="6000" data-y="0" data-rotate="180" data-thumbnail="images/thumbs/895601241627453.jpg">
+			<img src="images/photos/895601241627453.jpg" />
+		</div>
+		<div class="step" data-x="7500" data-y="0" data-rotatey="180" data-thumbnail="images/thumbs/895601241627457.jpg">
+			<img src="images/photos/895601241627457.jpg" />
+		</div>
+		<div class="step" data-x="9000" data-y="0" data-thumbnail="images/thumbs/895601241627459.jpg">
+			<img src="images/photos/895601241627459.jpg" />
+		</div>
+		<div class="step" data-x="10500" data-y="0" data-rotate="80" data-thumbnail="images/thumbs/895601241627470.jpg">
+			<img src="images/photos/895601241627470.jpg" />
+		</div>
+		<div class="step" data-x="12000" data-y="0" data-rotatex="180" data-thumbnail="images/thumbs/895601241627495.jpg">
+			<img src="images/photos/895601241627495.jpg" />
+		</div>
+		<div class="step" data-x="13500" data-y="0" data-rotatey="180" data-scale="0.6" data-thumbnail="images/thumbs/895601241627526.jpg">
+			<img src="images/photos/895601241627526.jpg" />
+		</div>
+		<div class="step" data-x="15000" data-y="0" data-rotatey="-180" data-thumbnail="images/thumbs/895601241627606.jpg">
+			<img src="images/photos/895601241627606.jpg" />
+		</div>
+		<div class="step" data-x="16500" data-y="0" data-rotatey="180" data-thumbnail="images/thumbs/895601241627621.jpg">
+			<img src="images/photos/895601241627621.jpg" />
+		</div>
+	</div>
+</div>
+
+</body>
 </html>
