--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>动态照片测试</title>
+<title>动态照片test1</title>
 
 </head>
 <body>
